# kmpi

./: .gitmodules  README.en.md  README.md
config/: ompi_check_ucg.m4  ompi_check_ucx.m4
ompi/instance/: instance.c
ompi/mca/coll/ucg/: Makefile.am  coll_ucg.h  coll_ucg_allgatherv.c  coll_ucg_allreduce.c  coll_ucg_alltoallv.c  coll_ucg_barrier.c  coll_ucg_bcast.c  coll_ucg_component.c  coll_ucg_debug.h  coll_ucg_dt.c  coll_ucg_dt.h  coll_ucg_gatherv.c  coll_ucg_module.c  coll_ucg_request.c  coll_ucg_request.h  coll_ucg_scatterv.c  configure.m4  owner.txt
ompi/mca/pml/ucx/: pml_ucx.c  pml_ucx.h  pml_ucx_request.c  pml_ucx_request.h
